Assets/Compiler/lex.output
Terminals unused in grammar

   BLOCK_START_FIN


Grammar

    0 $accept: statement $end

    1 statement: %empty
    2          | statement COMMENT FIN
    3          | statement if_state FIN
    4          | statement calculation FIN
    5          | statement for_state FIN
    6          | statement conversation FIN
    7          | statement command FIN
    8          | statement function FIN
    9          | statement use_function FIN
   10          | statement flag_mark FIN
   11          | statement FIN

   12 flag_mark: FLAGS

   13 flag: FLAGS

   14 calculation: VARIABLE ASSIGN calculate_value
   15            | VARIABLE ASSIGN VARIABLE

   16 calculate_value: calculate_number
   17                | calculate_string
   18                | calculate_boolean
   19                | number
   20                | string
   21                | boolean

   22 calculate_number: VARIABLE ADD number
   23                 | number ADD VARIABLE
   24                 | VARIABLE ADD VARIABLE
   25                 | VARIABLE SUB number
   26                 | number SUB VARIABLE
   27                 | VARIABLE SUB VARIABLE
   28                 | VARIABLE MUL number
   29                 | number MUL VARIABLE
   30                 | VARIABLE MUL VARIABLE
   31                 | VARIABLE DIV number
   32                 | number DIV VARIABLE
   33                 | VARIABLE DIV VARIABLE
   34                 | VARIABLE MOD number
   35                 | number MOD VARIABLE
   36                 | VARIABLE MOD VARIABLE

   37 number_var: VARIABLE
   38           | number

   39 number: NUMBER
   40       | OPEN number CLOSE
   41       | number ADD number
   42       | number SUB number
   43       | number DIV number
   44       | number MUL number
   45       | number MOD number

   46 calculate_string: string ADD VARIABLE
   47                 | VARIABLE ADD string

   48 string_var: VARIABLE
   49           | string

   50 string: STRING
   51       | string ADD string

   52 calculate_boolean: number GT VARIABLE
   53                  | number LT VARIABLE
   54                  | number GE VARIABLE
   55                  | number LE VARIABLE
   56                  | number EQ VARIABLE
   57                  | VARIABLE GT number
   58                  | VARIABLE LT number
   59                  | VARIABLE GE number
   60                  | VARIABLE LE number
   61                  | VARIABLE EQ number
   62                  | VARIABLE GT VARIABLE
   63                  | VARIABLE LT VARIABLE
   64                  | VARIABLE GE VARIABLE
   65                  | VARIABLE LE VARIABLE
   66                  | VARIABLE EQ VARIABLE

   67 boolean_var: VARIABLE
   68            | boolean

   69 boolean: BOOLEAN
   70        | OPEN boolean CLOSE
   71        | number GT number
   72        | number LT number
   73        | number GE number
   74        | number LE number
   75        | number EQ number

   76 color: COLOR

   77 place: VARIABLE
   78      | FUNCTION_NAME

   79 command: LD place COMMA string_var COMMA number_var COMMA number_var
   80        | LD place COMMA string_var COMMA number_var
   81        | LD place COMMA string_var
   82        | BG string_var COMMA number_var COMMA number_var
   83        | BG string_var COMMA number_var
   84        | BG string_var
   85        | BG color COMMA number_var COMMA number_var
   86        | BG color COMMA number_var
   87        | BG color
   88        | CL place COMMA number_var COMMA number_var
   89        | CL place COMMA number_var
   90        | CL place
   91        | CHANGESCENE string_var
   92        | LSP place COMMA string_var COMMA number_var COMMA number_var COMMA boolean
   93        | LSP place COMMA string_var COMMA number_var COMMA number_var
   94        | LSPH place COMMA string_var COMMA number_var COMMA number_var COMMA boolean
   95        | LSPH place COMMA string_var COMMA number_var COMMA number_var
   96        | MOVIE string_var
   97        | DEFBUTTON place COMMA number_var COMMA number_var COMMA string_var COMMA string_var COMMA string_var COMMA string_var
   98        | DEFBUTTON place COMMA number_var COMMA number_var COMMA string_var COMMA string_var
   99        | DEFBUTTON place COMMA number_var COMMA number_var COMMA string_var
  100        | BUTTON place COMMA number_var COMMA number_var COMMA string_var COMMA flag
  101        | SELECTN
  102        | SELECT place COMMA select_args
  103        | BGM string_var COMMA string_var
  104        | BGM string_var
  105        | BGMSTOP
  106        | SE string_var COMMA string_var
  107        | SE string_var
  108        | TEXTOFFN
  109        | TEXTONN
  110        | TEXTOFF place
  111        | TEXTON place
  112        | VSP place COMMA number_var
  113        | CSP place
  114        | CSPN
  115        | MSP place COMMA number_var COMMA number_var
  116        | BGMVOL number_var
  117        | QUAKE number_var COMMA number_var COMMA number_var
  118        | QUAKE number_var COMMA number_var COMMA number_var COMMA number_var
  119        | QUAKE number_var COMMA number_var COMMA number_var COMMA number_var COMMA string_var
  120        | TEXTDEF place COMMA string_var COMMA number_var COMMA number_var COMMA number_var COMMA number_var COMMA number_var COMMA number_var COMMA number_var COMMA number_var COMMA number_var COMMA string_var
  121        | TEXTDEF place COMMA string_var COMMA number_var COMMA number_var COMMA number_var COMMA number_var COMMA number_var COMMA number_var COMMA number_var COMMA number_var COMMA number_var
  122        | TEXTSPEED number_var
  123        | FOOTERON
  124        | FOOTEROFF
  125        | GOTO flag
  126        | FOOTERREGIST string_var COMMA string_var COMMA number_var COMMA string_var COMMA number_var COMMA number_var COMMA number_var
  127        | DELAY number_var
  128        | TEXTWRITE place COMMA string_var COMMA number_var COMMA color COMMA string_var
  129        | SAVE string_var
  130        | LOAD string_var
  131        | RELEASE
  132        | PRINT number_var
  133        | PRINT number_var COMMA number_var
  134        | END

  135 select_args: string_var
  136            | string_var COMMA select_args

  137 function: DEF function_name_check OPEN args CLOSE function_contents
  138         | DEF function_name_check OPEN CLOSE function_contents

  139 function_name_check: FUNCTION_NAME

  140 function_name: FUNCTION_NAME

  141 use_function: function_name OPEN args_push CLOSE
  142             | function_name OPEN CLOSE

  143 args_push: COMMA args_number args_push
  144          | COMMA args_str args_push
  145          | COMMA args_var args_push
  146          | args_number args_push
  147          | args_str args_push
  148          | args_var args_push
  149          | args_number
  150          | args_str
  151          | args_var
  152          | COMMA args_number
  153          | COMMA args_str
  154          | COMMA args_var

  155 args_var: VARIABLE

  156 args_number: number

  157 args_str: string

  158 args: VARIABLE COMMA args
  159     | VARIABLE

  160 function_contents: function_start sys_statement function_end
  161                  | FIN function_start FIN sys_statement function_end

  162 function_start: BLOCK_OPEN

  163 function_end: BLOCK_CLOSE

  164 if_state: IF OPEN if_boolean_var CLOSE if_contents

  165 if_boolean_var: boolean_var

  166 if_contents: if_starts sys_statement if_end
  167            | FIN if_starts FIN sys_statement if_end

  168 if_starts: BLOCK_OPEN

  169 if_end: BLOCK_CLOSE

  170 for_state: FOR OPEN for_calc COMMA for_boolean COMMA for_calc CLOSE for_contents

  171 for_calc: calculation

  172 for_boolean: boolean_var

  173 for_contents: for_starts sys_statement for_end
  174             | FIN for_starts FIN sys_statement for_end

  175 sys_statement: %empty
  176              | sys_statement COMMENT FIN
  177              | sys_statement if_state FIN
  178              | sys_statement calculation FIN
  179              | sys_statement for_state FIN
  180              | sys_statement conversation FIN
  181              | sys_statement command FIN
  182              | sys_statement use_function FIN
  183              | sys_statement continue_for FIN
  184              | sys_statement break_for FIN
  185              | sys_statement FIN

  186 for_starts: BLOCK_OPEN

  187 for_end: BLOCK_CLOSE

  188 continue_for: CONTINUE

  189 break_for: BREAK

  190 conversation: CONVERSATION
  191             | name CONVERSATION

  192 name: NAME_BLOCK_OPEN CONVERSATION NAME_BLOCK_CLOSE


Terminals, with rules where they appear

$end (0) 0
error (256)
NUMBER (258) 39
BOOLEAN (259) 69
STRING (260) 50
FLAGS (261) 12 13
VARIABLE (262) 14 15 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37
    46 47 48 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 77 155
    158 159
OPEN (263) 40 70 137 138 141 142 164 170
CLOSE (264) 40 70 137 138 141 142 164 170
BLOCK_OPEN (265) 162 168 186
BLOCK_CLOSE (266) 163 169 187
COMMA (267) 79 80 81 82 83 85 86 88 89 92 93 94 95 97 98 99 100 102
    103 106 112 115 117 118 119 120 121 126 128 133 136 143 144 145
    152 153 154 158 170
COMMENT (268) 2 176
COLOR (269) 76
FIN (270) 2 3 4 5 6 7 8 9 10 11 161 167 174 176 177 178 179 180 181
    182 183 184 185
IF (271) 164
BREAK (272) 189
CONTINUE (273) 188
FOR (274) 170
BLOCK_START_FIN (275)
CONVERSATION (276) 190 191 192
DEF (277) 137 138
FUNCTION_NAME (278) 78 139 140
NAME_BLOCK_OPEN (279) 192
NAME_BLOCK_CLOSE (280) 192
LD (281) 79 80 81
CL (282) 88 89 90
BG (283) 82 83 84 85 86 87
MOVIE (284) 96
LSP (285) 92 93
LSPH (286) 94 95
PRINT (287) 132 133
VSP (288) 112
CSP (289) 113
CSPN (290) 114
MSP (291) 115
BGMVOL (292) 116
QUAKE (293) 117 118 119
FOOTERREGIST (294) 126
DEFBUTTON (295) 97 98 99
BUTTON (296) 100
SELECT (297) 102
SELECTN (298) 101
CHANGESCENE (299) 91
TEXTDEF (300) 120 121
TEXTSPEED (301) 122
FOOTERON (302) 123
FOOTEROFF (303) 124
GOTO (304) 125
SAVE (305) 129
LOAD (306) 130
END (307) 134
BGM (308) 103 104
BGMSTOP (309) 105
SE (310) 106 107
DELAY (311) 127
RELEASE (312) 131
TEXTOFF (313) 110
TEXTON (314) 111
TEXTONN (315) 109
TEXTOFFN (316) 108
TEXTWRITE (317) 128
ADD (318) 22 23 24 41 46 47 51
SUB (319) 25 26 27 42
GT (320) 52 57 62 71
LT (321) 53 58 63 72
GE (322) 54 59 64 73
LE (323) 55 60 65 74
EQ (324) 56 61 66 75
ASSIGN (325) 14 15
MOD (326) 34 35 36 45
MUL (327) 28 29 30 44
DIV (328) 31 32 33 43


Nonterminals, with rules where they appear

$accept (74)
    on left: 0
statement (75)
    on left: 1 2 3 4 5 6 7 8 9 10 11, on right: 0 2 3 4 5 6 7 8 9 10
    11
flag_mark (76)
    on left: 12, on right: 10
flag (77)
    on left: 13, on right: 100 125
calculation (78)
    on left: 14 15, on right: 4 171 178
calculate_value (79)
    on left: 16 17 18 19 20 21, on right: 14
calculate_number (80)
    on left: 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36, on right:
    16
number_var (81)
    on left: 37 38, on right: 79 80 82 83 85 86 88 89 92 93 94 95 97
    98 99 100 112 115 116 117 118 119 120 121 122 126 127 128 132 133
number (82)
    on left: 39 40 41 42 43 44 45, on right: 19 22 23 25 26 28 29 31
    32 34 35 38 40 41 42 43 44 45 52 53 54 55 56 57 58 59 60 61 71
    72 73 74 75 156
calculate_string (83)
    on left: 46 47, on right: 17
string_var (84)
    on left: 48 49, on right: 79 80 81 82 83 84 91 92 93 94 95 96 97
    98 99 100 103 104 106 107 119 120 121 126 128 129 130 135 136
string (85)
    on left: 50 51, on right: 20 46 47 49 51 157
calculate_boolean (86)
    on left: 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66, on right:
    18
boolean_var (87)
    on left: 67 68, on right: 165 172
boolean (88)
    on left: 69 70 71 72 73 74 75, on right: 21 68 70 92 94
color (89)
    on left: 76, on right: 85 86 87 128
place (90)
    on left: 77 78, on right: 79 80 81 88 89 90 92 93 94 95 97 98 99
    100 102 110 111 112 113 115 120 121 128
command (91)
    on left: 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96
    97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113
    114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129
    130 131 132 133 134, on right: 7 181
select_args (92)
    on left: 135 136, on right: 102 136
function (93)
    on left: 137 138, on right: 8
function_name_check (94)
    on left: 139, on right: 137 138
function_name (95)
    on left: 140, on right: 141 142
use_function (96)
    on left: 141 142, on right: 9 182
args_push (97)
    on left: 143 144 145 146 147 148 149 150 151 152 153 154, on right:
    141 143 144 145 146 147 148
args_var (98)
    on left: 155, on right: 145 148 151 154
args_number (99)
    on left: 156, on right: 143 146 149 152
args_str (100)
    on left: 157, on right: 144 147 150 153
args (101)
    on left: 158 159, on right: 137 158
function_contents (102)
    on left: 160 161, on right: 137 138
function_start (103)
    on left: 162, on right: 160 161
function_end (104)
    on left: 163, on right: 160 161
if_state (105)
    on left: 164, on right: 3 177
if_boolean_var (106)
    on left: 165, on right: 164
if_contents (107)
    on left: 166 167, on right: 164
if_starts (108)
    on left: 168, on right: 166 167
if_end (109)
    on left: 169, on right: 166 167
for_state (110)
    on left: 170, on right: 5 179
for_calc (111)
    on left: 171, on right: 170
for_boolean (112)
    on left: 172, on right: 170
for_contents (113)
    on left: 173 174, on right: 170
sys_statement (114)
    on left: 175 176 177 178 179 180 181 182 183 184 185, on right:
    160 161 166 167 173 174 176 177 178 179 180 181 182 183 184 185
for_starts (115)
    on left: 186, on right: 173 174
for_end (116)
    on left: 187, on right: 173 174
continue_for (117)
    on left: 188, on right: 183
break_for (118)
    on left: 189, on right: 184
conversation (119)
    on left: 190 191, on right: 6 180
name (120)
    on left: 192, on right: 191


State 0

    0 $accept: . statement $end

    $default  reduce using rule 1 (statement)

    statement  go to state 1


State 1

    0 $accept: statement . $end
    2 statement: statement . COMMENT FIN
    3          | statement . if_state FIN
    4          | statement . calculation FIN
    5          | statement . for_state FIN
    6          | statement . conversation FIN
    7          | statement . command FIN
    8          | statement . function FIN
    9          | statement . use_function FIN
   10          | statement . flag_mark FIN
   11          | statement . FIN

    $end             shift, and go to state 2
    FLAGS            shift, and go to state 3
    VARIABLE         shift, and go to state 4
    COMMENT          shift, and go to state 5
    FIN              shift, and go to state 6
    IF               shift, and go to state 7
    FOR              shift, and go to state 8
    CONVERSATION     shift, and go to state 9
    DEF              shift, and go to state 10
    FUNCTION_NAME    shift, and go to state 11
    NAME_BLOCK_OPEN  shift, and go to state 12
    LD               shift, and go to state 13
    CL               shift, and go to state 14
    BG               shift, and go to state 15
    MOVIE            shift, and go to state 16
    LSP              shift, and go to state 17
    LSPH             shift, and go to state 18
    PRINT            shift, and go to state 19
    VSP              shift, and go to state 20
    CSP              shift, and go to state 21
    CSPN             shift, and go to state 22
    MSP              shift, and go to state 23
    BGMVOL           shift, and go to state 24
    QUAKE            shift, and go to state 25
    FOOTERREGIST     shift, and go to state 26
    DEFBUTTON        shift, and go to state 27
    BUTTON           shift, and go to state 28
    SELECT           shift, and go to state 29
    SELECTN          shift, and go to state 30
    CHANGESCENE      shift, and go to state 31
    TEXTDEF          shift, and go to state 32
    TEXTSPEED        shift, and go to state 33
    FOOTERON         shift, and go to state 34
    FOOTEROFF        shift, and go to state 35
    GOTO             shift, and go to state 36
    SAVE             shift, and go to state 37
    LOAD             shift, and go to state 38
    END              shift, and go to state 39
    BGM              shift, and go to state 40
    BGMSTOP          shift, and go to state 41
    SE               shift, and go to state 42
    DELAY            shift, and go to state 43
    RELEASE          shift, and go to state 44
    TEXTOFF          shift, and go to state 45
    TEXTON           shift, and go to state 46
    TEXTONN          shift, and go to state 47
    TEXTOFFN         shift, and go to state 48
    TEXTWRITE        shift, and go to state 49

    flag_mark      go to state 50
    calculation    go to state 51
    command        go to state 52
    function       go to state 53
    function_name  go to state 54
    use_function   go to state 55
    if_state       go to state 56
    for_state      go to state 57
    conversation   go to state 58
    name           go to state 59


State 2

    0 $accept: statement $end .

    $default  accept


State 3

   12 flag_mark: FLAGS .

    $default  reduce using rule 12 (flag_mark)


State 4

   14 calculation: VARIABLE . ASSIGN calculate_value
   15            | VARIABLE . ASSIGN VARIABLE

    ASSIGN  shift, and go to state 60


State 5

    2 statement: statement COMMENT . FIN

    FIN  shift, and go to state 61


State 6

   11 statement: statement FIN .

    $default  reduce using rule 11 (statement)


State 7

  164 if_state: IF . OPEN if_boolean_var CLOSE if_contents

    OPEN  shift, and go to state 62


State 8

  170 for_state: FOR . OPEN for_calc COMMA for_boolean COMMA for_calc CLOSE for_contents

    OPEN  shift, and go to state 63


State 9

  190 conversation: CONVERSATION .

    $default  reduce using rule 190 (conversation)


State 10

  137 function: DEF . function_name_check OPEN args CLOSE function_contents
  138         | DEF . function_name_check OPEN CLOSE function_contents

    FUNCTION_NAME  shift, and go to state 64

    function_name_check  go to state 65


State 11

  140 function_name: FUNCTION_NAME .

    $default  reduce using rule 140 (function_name)


State 12

  192 name: NAME_BLOCK_OPEN . CONVERSATION NAME_BLOCK_CLOSE

    CONVERSATION  shift, and go to state 66


State 13

   79 command: LD . place COMMA string_var COMMA number_var COMMA number_var
   80        | LD . place COMMA string_var COMMA number_var
   81        | LD . place COMMA string_var

    VARIABLE       shift, and go to state 67
    FUNCTION_NAME  shift, and go to state 68

    place  go to state 69


State 14

   88 command: CL . place COMMA number_var COMMA number_var
   89        | CL . place COMMA number_var
   90        | CL . place

    VARIABLE       shift, and go to state 67
    FUNCTION_NAME  shift, and go to state 68

    place  go to state 70


State 15

   82 command: BG . string_var COMMA number_var COMMA number_var
   83        | BG . string_var COMMA number_var
   84        | BG . string_var
   85        | BG . color COMMA number_var COMMA number_var
   86        | BG . color COMMA number_var
   87        | BG . color

    STRING    shift, and go to state 71
    VARIABLE  shift, and go to state 72
    COLOR     shift, and go to state 73

    string_var  go to state 74
    string      go to state 75
    color       go to state 76


State 16

   96 command: MOVIE . string_var

    STRING    shift, and go to state 71
    VARIABLE  shift, and go to state 72

    string_var  go to state 77
    string      go to state 75


State 17

   92 command: LSP . place COMMA string_var COMMA number_var COMMA number_var COMMA boolean
   93        | LSP . place COMMA string_var COMMA number_var COMMA number_var

    VARIABLE       shift, and go to state 67
    FUNCTION_NAME  shift, and go to state 68

    place  go to state 78


State 18

   94 command: LSPH . place COMMA string_var COMMA number_var COMMA number_var COMMA boolean
   95        | LSPH . place COMMA string_var COMMA number_var COMMA number_var

    VARIABLE       shift, and go to state 67
    FUNCTION_NAME  shift, and go to state 68

    place  go to state 79


State 19

  132 command: PRINT . number_var
  133        | PRINT . number_var COMMA number_var

    NUMBER    shift, and go to state 80
    VARIABLE  shift, and go to state 81
    OPEN      shift, and go to state 82

    number_var  go to state 83
    number      go to state 84


State 20

  112 command: VSP . place COMMA number_var

    VARIABLE       shift, and go to state 67
    FUNCTION_NAME  shift, and go to state 68

    place  go to state 85


State 21

  113 command: CSP . place

    VARIABLE       shift, and go to state 67
    FUNCTION_NAME  shift, and go to state 68

    place  go to state 86


State 22

  114 command: CSPN .

    $default  reduce using rule 114 (command)


State 23

  115 command: MSP . place COMMA number_var COMMA number_var

    VARIABLE       shift, and go to state 67
    FUNCTION_NAME  shift, and go to state 68

    place  go to state 87


State 24

  116 command: BGMVOL . number_var

    NUMBER    shift, and go to state 80
    VARIABLE  shift, and go to state 81
    OPEN      shift, and go to state 82

    number_var  go to state 88
    number      go to state 84


State 25

  117 command: QUAKE . number_var COMMA number_var COMMA number_var
  118        | QUAKE . number_var COMMA number_var COMMA number_var COMMA number_var
  119        | QUAKE . number_var COMMA number_var COMMA number_var COMMA number_var COMMA string_var

    NUMBER    shift, and go to state 80
    VARIABLE  shift, and go to state 81
    OPEN      shift, and go to state 82

    number_var  go to state 89
    number      go to state 84


State 26

  126 command: FOOTERREGIST . string_var COMMA string_var COMMA number_var COMMA string_var COMMA number_var COMMA number_var COMMA number_var

    STRING    shift, and go to state 71
    VARIABLE  shift, and go to state 72

    string_var  go to state 90
    string      go to state 75


State 27

   97 command: DEFBUTTON . place COMMA number_var COMMA number_var COMMA string_var COMMA string_var COMMA string_var COMMA string_var
   98        | DEFBUTTON . place COMMA number_var COMMA number_var COMMA string_var COMMA string_var
   99        | DEFBUTTON . place COMMA number_var COMMA number_var COMMA string_var

    VARIABLE       shift, and go to state 67
    FUNCTION_NAME  shift, and go to state 68

    place  go to state 91


State 28

  100 command: BUTTON . place COMMA number_var COMMA number_var COMMA string_var COMMA flag

    VARIABLE       shift, and go to state 67
    FUNCTION_NAME  shift, and go to state 68

    place  go to state 92


State 29

  102 command: SELECT . place COMMA select_args

    VARIABLE       shift, and go to state 67
    FUNCTION_NAME  shift, and go to state 68

    place  go to state 93


State 30

  101 command: SELECTN .

    $default  reduce using rule 101 (command)


State 31

   91 command: CHANGESCENE . string_var

    STRING    shift, and go to state 71
    VARIABLE  shift, and go to state 72

    string_var  go to state 94
    string      go to state 75


State 32

  120 command: TEXTDEF . place COMMA string_var COMMA number_var COMMA number_var COMMA number_var COMMA number_var COMMA number_var COMMA number_var COMMA number_var COMMA number_var COMMA number_var COMMA string_var
  121        | TEXTDEF . place COMMA string_var COMMA number_var COMMA number_var COMMA number_var COMMA number_var COMMA number_var COMMA number_var COMMA number_var COMMA number_var COMMA number_var

    VARIABLE       shift, and go to state 67
    FUNCTION_NAME  shift, and go to state 68

    place  go to state 95


State 33

  122 command: TEXTSPEED . number_var

    NUMBER    shift, and go to state 80
    VARIABLE  shift, and go to state 81
    OPEN      shift, and go to state 82

    number_var  go to state 96
    number      go to state 84


State 34

  123 command: FOOTERON .

    $default  reduce using rule 123 (command)


State 35

  124 command: FOOTEROFF .

    $default  reduce using rule 124 (command)


State 36

  125 command: GOTO . flag

    FLAGS  shift, and go to state 97

    flag  go to state 98


State 37

  129 command: SAVE . string_var

    STRING    shift, and go to state 71
    VARIABLE  shift, and go to state 72

    string_var  go to state 99
    string      go to state 75


State 38

  130 command: LOAD . string_var

    STRING    shift, and go to state 71
    VARIABLE  shift, and go to state 72

    string_var  go to state 100
    string      go to state 75


State 39

  134 command: END .

    $default  reduce using rule 134 (command)


State 40

  103 command: BGM . string_var COMMA string_var
  104        | BGM . string_var

    STRING    shift, and go to state 71
    VARIABLE  shift, and go to state 72

    string_var  go to state 101
    string      go to state 75


State 41

  105 command: BGMSTOP .

    $default  reduce using rule 105 (command)


State 42

  106 command: SE . string_var COMMA string_var
  107        | SE . string_var

    STRING    shift, and go to state 71
    VARIABLE  shift, and go to state 72

    string_var  go to state 102
    string      go to state 75


State 43

  127 command: DELAY . number_var

    NUMBER    shift, and go to state 80
    VARIABLE  shift, and go to state 81
    OPEN      shift, and go to state 82

    number_var  go to state 103
    number      go to state 84


State 44

  131 command: RELEASE .

    $default  reduce using rule 131 (command)


State 45

  110 command: TEXTOFF . place

    VARIABLE       shift, and go to state 67
    FUNCTION_NAME  shift, and go to state 68

    place  go to state 104


State 46

  111 command: TEXTON . place

    VARIABLE       shift, and go to state 67
    FUNCTION_NAME  shift, and go to state 68

    place  go to state 105


State 47

  109 command: TEXTONN .

    $default  reduce using rule 109 (command)


State 48

  108 command: TEXTOFFN .

    $default  reduce using rule 108 (command)


State 49

  128 command: TEXTWRITE . place COMMA string_var COMMA number_var COMMA color COMMA string_var

    VARIABLE       shift, and go to state 67
    FUNCTION_NAME  shift, and go to state 68

    place  go to state 106


State 50

   10 statement: statement flag_mark . FIN

    FIN  shift, and go to state 107


State 51

    4 statement: statement calculation . FIN

    FIN  shift, and go to state 108


State 52

    7 statement: statement command . FIN

    FIN  shift, and go to state 109


State 53

    8 statement: statement function . FIN

    FIN  shift, and go to state 110


State 54

  141 use_function: function_name . OPEN args_push CLOSE
  142             | function_name . OPEN CLOSE

    OPEN  shift, and go to state 111


State 55

    9 statement: statement use_function . FIN

    FIN  shift, and go to state 112


State 56

    3 statement: statement if_state . FIN

    FIN  shift, and go to state 113


State 57

    5 statement: statement for_state . FIN

    FIN  shift, and go to state 114


State 58

    6 statement: statement conversation . FIN

    FIN  shift, and go to state 115


State 59

  191 conversation: name . CONVERSATION

    CONVERSATION  shift, and go to state 116


State 60

   14 calculation: VARIABLE ASSIGN . calculate_value
   15            | VARIABLE ASSIGN . VARIABLE

    NUMBER    shift, and go to state 80
    BOOLEAN   shift, and go to state 117
    STRING    shift, and go to state 71
    VARIABLE  shift, and go to state 118
    OPEN      shift, and go to state 119

    calculate_value    go to state 120
    calculate_number   go to state 121
    number             go to state 122
    calculate_string   go to state 123
    string             go to state 124
    calculate_boolean  go to state 125
    boolean            go to state 126


State 61

    2 statement: statement COMMENT FIN .

    $default  reduce using rule 2 (statement)


State 62

  164 if_state: IF OPEN . if_boolean_var CLOSE if_contents

    NUMBER    shift, and go to state 80
    BOOLEAN   shift, and go to state 117
    VARIABLE  shift, and go to state 127
    OPEN      shift, and go to state 119

    number          go to state 128
    boolean_var     go to state 129
    boolean         go to state 130
    if_boolean_var  go to state 131


State 63

  170 for_state: FOR OPEN . for_calc COMMA for_boolean COMMA for_calc CLOSE for_contents

    VARIABLE  shift, and go to state 4

    calculation  go to state 132
    for_calc     go to state 133


State 64

  139 function_name_check: FUNCTION_NAME .

    $default  reduce using rule 139 (function_name_check)


State 65

  137 function: DEF function_name_check . OPEN args CLOSE function_contents
  138         | DEF function_name_check . OPEN CLOSE function_contents

    OPEN  shift, and go to state 134


State 66

  192 name: NAME_BLOCK_OPEN CONVERSATION . NAME_BLOCK_CLOSE

    NAME_BLOCK_CLOSE  shift, and go to state 135


State 67

   77 place: VARIABLE .

    $default  reduce using rule 77 (place)


State 68

   78 place: FUNCTION_NAME .

    $default  reduce using rule 78 (place)


State 69

   79 command: LD place . COMMA string_var COMMA number_var COMMA number_var
   80        | LD place . COMMA string_var COMMA number_var
   81        | LD place . COMMA string_var

    COMMA  shift, and go to state 136


State 70

   88 command: CL place . COMMA number_var COMMA number_var
   89        | CL place . COMMA number_var
   90        | CL place .

    COMMA  shift, and go to state 137

    $default  reduce using rule 90 (command)


State 71

   50 string: STRING .

    $default  reduce using rule 50 (string)


State 72

   48 string_var: VARIABLE .

    $default  reduce using rule 48 (string_var)


State 73

   76 color: COLOR .

    $default  reduce using rule 76 (color)


State 74

   82 command: BG string_var . COMMA number_var COMMA number_var
   83        | BG string_var . COMMA number_var
   84        | BG string_var .

    COMMA  shift, and go to state 138

    $default  reduce using rule 84 (command)


State 75

   49 string_var: string .
   51 string: string . ADD string

    ADD  shift, and go to state 139

    $default  reduce using rule 49 (string_var)


State 76

   85 command: BG color . COMMA number_var COMMA number_var
   86        | BG color . COMMA number_var
   87        | BG color .

    COMMA  shift, and go to state 140

    $default  reduce using rule 87 (command)


State 77

   96 command: MOVIE string_var .

    $default  reduce using rule 96 (command)


State 78

   92 command: LSP place . COMMA string_var COMMA number_var COMMA number_var COMMA boolean
   93        | LSP place . COMMA string_var COMMA number_var COMMA number_var

    COMMA  shift, and go to state 141


State 79

   94 command: LSPH place . COMMA string_var COMMA number_var COMMA number_var COMMA boolean
   95        | LSPH place . COMMA string_var COMMA number_var COMMA number_var

    COMMA  shift, and go to state 142


State 80

   39 number: NUMBER .

    $default  reduce using rule 39 (number)


State 81

   37 number_var: VARIABLE .

    $default  reduce using rule 37 (number_var)


State 82

   40 number: OPEN . number CLOSE

    NUMBER  shift, and go to state 80
    OPEN    shift, and go to state 82

    number  go to state 143


State 83

  132 command: PRINT number_var .
  133        | PRINT number_var . COMMA number_var

    COMMA  shift, and go to state 144

    $default  reduce using rule 132 (command)


State 84

   38 number_var: number .
   41 number: number . ADD number
   42       | number . SUB number
   43       | number . DIV number
   44       | number . MUL number
   45       | number . MOD number

    ADD  shift, and go to state 145
    SUB  shift, and go to state 146
    MOD  shift, and go to state 147
    MUL  shift, and go to state 148
    DIV  shift, and go to state 149

    $default  reduce using rule 38 (number_var)


State 85

  112 command: VSP place . COMMA number_var

    COMMA  shift, and go to state 150


State 86

  113 command: CSP place .

    $default  reduce using rule 113 (command)


State 87

  115 command: MSP place . COMMA number_var COMMA number_var

    COMMA  shift, and go to state 151


State 88

  116 command: BGMVOL number_var .

    $default  reduce using rule 116 (command)


State 89

  117 command: QUAKE number_var . COMMA number_var COMMA number_var
  118        | QUAKE number_var . COMMA number_var COMMA number_var COMMA number_var
  119        | QUAKE number_var . COMMA number_var COMMA number_var COMMA number_var COMMA string_var

    COMMA  shift, and go to state 152


State 90

  126 command: FOOTERREGIST string_var . COMMA string_var COMMA number_var COMMA string_var COMMA number_var COMMA number_var COMMA number_var

    COMMA  shift, and go to state 153


State 91

   97 command: DEFBUTTON place . COMMA number_var COMMA number_var COMMA string_var COMMA string_var COMMA string_var COMMA string_var
   98        | DEFBUTTON place . COMMA number_var COMMA number_var COMMA string_var COMMA string_var
   99        | DEFBUTTON place . COMMA number_var COMMA number_var COMMA string_var

    COMMA  shift, and go to state 154


State 92

  100 command: BUTTON place . COMMA number_var COMMA number_var COMMA string_var COMMA flag

    COMMA  shift, and go to state 155


State 93

  102 command: SELECT place . COMMA select_args

    COMMA  shift, and go to state 156


State 94

   91 command: CHANGESCENE string_var .

    $default  reduce using rule 91 (command)


State 95

  120 command: TEXTDEF place . COMMA string_var COMMA number_var COMMA number_var COMMA number_var COMMA number_var COMMA number_var COMMA number_var COMMA number_var COMMA number_var COMMA number_var COMMA string_var
  121        | TEXTDEF place . COMMA string_var COMMA number_var COMMA number_var COMMA number_var COMMA number_var COMMA number_var COMMA number_var COMMA number_var COMMA number_var COMMA number_var

    COMMA  shift, and go to state 157


State 96

  122 command: TEXTSPEED number_var .

    $default  reduce using rule 122 (command)


State 97

   13 flag: FLAGS .

    $default  reduce using rule 13 (flag)


State 98

  125 command: GOTO flag .

    $default  reduce using rule 125 (command)


State 99

  129 command: SAVE string_var .

    $default  reduce using rule 129 (command)


State 100

  130 command: LOAD string_var .

    $default  reduce using rule 130 (command)


State 101

  103 command: BGM string_var . COMMA string_var
  104        | BGM string_var .

    COMMA  shift, and go to state 158

    $default  reduce using rule 104 (command)


State 102

  106 command: SE string_var . COMMA string_var
  107        | SE string_var .

    COMMA  shift, and go to state 159

    $default  reduce using rule 107 (command)


State 103

  127 command: DELAY number_var .

    $default  reduce using rule 127 (command)


State 104

  110 command: TEXTOFF place .

    $default  reduce using rule 110 (command)


State 105

  111 command: TEXTON place .

    $default  reduce using rule 111 (command)


State 106

  128 command: TEXTWRITE place . COMMA string_var COMMA number_var COMMA color COMMA string_var

    COMMA  shift, and go to state 160


State 107

   10 statement: statement flag_mark FIN .

    $default  reduce using rule 10 (statement)


State 108

    4 statement: statement calculation FIN .

    $default  reduce using rule 4 (statement)


State 109

    7 statement: statement command FIN .

    $default  reduce using rule 7 (statement)


State 110

    8 statement: statement function FIN .

    $default  reduce using rule 8 (statement)


State 111

  141 use_function: function_name OPEN . args_push CLOSE
  142             | function_name OPEN . CLOSE
